[project]
name = "isthis"
version = "0.1.0"
description = "Spotify artist Is This playlists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "rich>=13.9.4",
    "spotipy>=2.25.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
